@@ -1,0 +1,19 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 20:25:29 brook Exp $
+
+R_PKGNAME=	promises
+R_PKGVER=	1.0.1
+CATEGORIES=	parallel
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Abstractions for promise-based asynchronous programming
+LICENSE=	mit
+
+DEPENDS+=	R-magrittr>=1.5:../../devel/R-magrittr
+DEPENDS+=	R-rlang>=0.4.0:../../devel/R-rlang
+
+USE_LANGUAGES=	c c++
+
+.include "../../math/R/Makefile.extension"
+.include "../../devel/R-Rcpp/buildlink3.mk"
+.include "../../sysutils/R-later/buildlink3.mk"
+.include "../../mk/bsd.pkg.mk"
